--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,26 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-      "declaration-block-trailing-semicolon": null,
-      "color-no-hex":true
+    "block-no-empty": true,
+    "color-no-invalid-hex": true,
+    "declaration-colon-space-after": "always",
+    "declaration-colon-space-before": "never",
+    "function-comma-space-after": "always",
+    "function-url-quotes": "double",
+    "media-feature-colon-space-after": "always",
+    "media-feature-colon-space-before": "never",
+    "media-feature-name-no-vendor-prefix": true,
+    "max-empty-lines": 5,
+    "number-leading-zero": "never",
+    "number-no-trailing-zeros": true,
+    "property-no-vendor-prefix": true,
+    "rule-no-duplicate-properties": true,
+    "declaration-block-no-single-line": true,
+    "rule-trailing-semicolon": "always",
+    "selector-list-comma-space-before": "never",
+    "selector-list-comma-newline-after": "always",
+    "selector-no-id": true,
+    "string-quotes": "double",
+    "value-no-vendor-prefix": true
   }
 }
