--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "dependencies": {
     "@vue/cli-plugin-pwa": "^3.5.1",
+    "cssnano": "^4.1.10",
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-px-to-viewport": "^1.1.0",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -31,6 +37,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "cssnano-preset-advanced": "^4.0.7",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
