--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js",
-    "commitmsg": "commitlint -e $GIT_PARAMS"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "@vue/cli-plugin-pwa": "^3.5.1",
+    "axios": "^0.18.0",
     "cssnano": "^4.1.10",
+    "element-ui": "^2.7.2",
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "^1.1.0",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "tiny-cookie": "^2.3.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
+    "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -86,6 +90,11 @@
       "path": "cz-customizable"
     }
   },
+  "husky": {
+        "hooks": {
+            "commitmsg": "commitlint -e $GIT_PARAMS"
+        }
+  },      
   "browserslist": [
     "> 1%",
     "last 2 versions",
