--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
   "dependencies": {
     "@vue/cli-plugin-pwa": "^3.5.1",
     "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
     "cssnano": "^4.1.10",
-    "element-ui": "^2.7.2",
+    "element-ui": "^2.8.2",
+    "node-sass": "^4.12.0",
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "^1.1.0",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "tiny-cookie": "^2.3.1",
+    "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vuex": "^3.1.0",
-    "vuex-persist": "^2.0.0"
+    "vuex-persist": "^2.0.0",
+    "vux": "^2.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -40,7 +47,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "cssnano-preset-advanced": "^4.0.7",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
@@ -56,8 +63,10 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^1.3.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -65,17 +74,22 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vux-loader": "^1.2.9",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
